--- a/lab_2/temperature_analysis.ipynb
+++ b/lab_2/temperature_analysis.ipynb
@@ -2,24 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_14324\\2151744951.py:1: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -28,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +95,7 @@
        "4  193808   82.0      4.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -145,38 +130,39 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Date</th>\n",
        "      <th>Value</th>\n",
        "      <th>Anomaly</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2022-08-01</th>\n",
+       "      <th>1012</th>\n",
+       "      <td>202208</td>\n",
        "      <td>79.7</td>\n",
        "      <td>1.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-09-01</th>\n",
+       "      <th>1013</th>\n",
+       "      <td>202209</td>\n",
        "      <td>71.4</td>\n",
        "      <td>1.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-10-01</th>\n",
+       "      <th>1014</th>\n",
+       "      <td>202210</td>\n",
        "      <td>58.7</td>\n",
        "      <td>-0.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-11-01</th>\n",
+       "      <th>1015</th>\n",
+       "      <td>202211</td>\n",
        "      <td>47.3</td>\n",
        "      <td>2.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2022-12-01</th>\n",
+       "      <th>1016</th>\n",
+       "      <td>202212</td>\n",
        "      <td>35.9</td>\n",
        "      <td>1.3</td>\n",
        "    </tr>\n",
@@ -185,16 +171,15 @@
        "</div>"
       ],
       "text/plain": [
-       "            Value  Anomaly\n",
-       "Date                      \n",
-       "2022-08-01   79.7      1.7\n",
-       "2022-09-01   71.4      1.2\n",
-       "2022-10-01   58.7     -0.4\n",
-       "2022-11-01   47.3      2.1\n",
-       "2022-12-01   35.9      1.3"
+       "        Date  Value  Anomaly\n",
+       "1012  202208   79.7      1.7\n",
+       "1013  202209   71.4      1.2\n",
+       "1014  202210   58.7     -0.4\n",
+       "1015  202211   47.3      2.1\n",
+       "1016  202212   35.9      1.3"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +213,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +307,7 @@
        "1938-08-01   82.0      4.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +477,7 @@
        "max      88.100000    16.500000"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,6 +485,244 @@
    "source": [
     "df.describe()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Value</th>\n",
+       "      <th>Anomaly</th>\n",
+       "      <th>Rank out of 1017</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1938-04-01</th>\n",
+       "      <td>57.3</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>493</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1938-05-01</th>\n",
+       "      <td>65.6</td>\n",
+       "      <td>-0.8</td>\n",
+       "      <td>626</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1938-06-01</th>\n",
+       "      <td>74.3</td>\n",
+       "      <td>-1.4</td>\n",
+       "      <td>777</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1938-07-01</th>\n",
+       "      <td>81.3</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1938-08-01</th>\n",
+       "      <td>82.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>991</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Value  Anomaly  Rank out of 1017\n",
+       "Date                                        \n",
+       "1938-04-01   57.3      0.8               493\n",
+       "1938-05-01   65.6     -0.8               626\n",
+       "1938-06-01   74.3     -1.4               777\n",
+       "1938-07-01   81.3      1.5               984\n",
+       "1938-08-01   82.0      4.0               991"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# rank the data by value out of len(df)\n",
+    "df[f'Rank out of {len(df)}'] = df['Value'].rank().astype(int)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Value</th>\n",
+       "      <th>Rank out of 1017</th>\n",
+       "      <th>Anomaly</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1938-04-01</th>\n",
+       "      <td>57.3</td>\n",
+       "      <td>493</td>\n",
+       "      <td>0.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1938-05-01</th>\n",
+       "      <td>65.6</td>\n",
+       "      <td>626</td>\n",
+       "      <td>-0.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1938-06-01</th>\n",
+       "      <td>74.3</td>\n",
+       "      <td>777</td>\n",
+       "      <td>-1.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1938-07-01</th>\n",
+       "      <td>81.3</td>\n",
+       "      <td>984</td>\n",
+       "      <td>1.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1938-08-01</th>\n",
+       "      <td>82.0</td>\n",
+       "      <td>991</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-08-01</th>\n",
+       "      <td>79.7</td>\n",
+       "      <td>938</td>\n",
+       "      <td>1.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-09-01</th>\n",
+       "      <td>71.4</td>\n",
+       "      <td>724</td>\n",
+       "      <td>1.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-01</th>\n",
+       "      <td>58.7</td>\n",
+       "      <td>513</td>\n",
+       "      <td>-0.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-01</th>\n",
+       "      <td>47.3</td>\n",
+       "      <td>363</td>\n",
+       "      <td>2.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-12-01</th>\n",
+       "      <td>35.9</td>\n",
+       "      <td>160</td>\n",
+       "      <td>1.3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1017 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Value  Rank out of 1017  Anomaly\n",
+       "Date                                        \n",
+       "1938-04-01   57.3               493      0.8\n",
+       "1938-05-01   65.6               626     -0.8\n",
+       "1938-06-01   74.3               777     -1.4\n",
+       "1938-07-01   81.3               984      1.5\n",
+       "1938-08-01   82.0               991      4.0\n",
+       "...           ...               ...      ...\n",
+       "2022-08-01   79.7               938      1.7\n",
+       "2022-09-01   71.4               724      1.2\n",
+       "2022-10-01   58.7               513     -0.4\n",
+       "2022-11-01   47.3               363      2.1\n",
+       "2022-12-01   35.9               160      1.3\n",
+       "\n",
+       "[1017 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# rearange the columns to be in the order: Date, Value, Rank, Anomaly\n",
+    "df = df[['Value', f'Rank out of {len(df)}', 'Anomaly']]\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
