--- a/labs/lab_5/arma_models.ipynb
+++ b/labs/lab_5/arma_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
     "from statsmodels.tsa.stattools import adfuller\n",
     "\n",
     "from ma_model import ma_series\n",
-    "from ar_model import ar_series"
+    "from ar_model import ar_series, ar_series_linear"
    ]
   },
   {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "20  2803.689824        0.0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "20  4590.199335        0.0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
        "20  8216.212460        0.0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
        "20  19995.088049        0.0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1063,7 @@
        "20  6055.81025        0.0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1291,7 +1291,7 @@
        "20  1142.366340  1.571817e-229"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1336,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1500,7 +1500,7 @@
        "20  2880.845252        0.0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1565,6 +1565,227 @@
    "source": [
     "From the above we can conclude that usage of AR models is more suitable if we want to capture the direct influence of previous values on the current one. On the other hand, MA models are better in capturing the effects of past points without considerating possible fluctuations from closest points."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Compare list comprehansion with np.dot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import timeit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "120 ms ± 3.46 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "ar_series(burnin=BURNIN, n=N, c=18, o=np.array([-0.6]), seed=SEED)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "AR model: y[t] = 18 -0.6y[t-1] + e[t]\n",
+      "29.8 ms ± 1.24 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "ar_series_linear(burnin=BURNIN, n=N, c=18, o=np.array([-0.6]), seed=SEED)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
