--- a/labs/lab_9/rvisitors.ipynb
+++ b/labs/lab_9/rvisitors.ipynb
@@ -975,6 +975,20 @@
     "print(f\"MAPE for prediciton from total: {mean_absolute_percentage_error(comp['actual'], comp['total_pred']):.4f}\")\n",
     "print(f\"MAPE for prediciton from sum: {mean_absolute_percentage_error(comp['actual'], comp['sum_pred']):.4f}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Predicting timeseries of each restaurant separatly and them summing them together gives better predictions than predicting the sum of all restaurants together."
+   ]
   }
  ],
  "metadata": {
